--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,271 +1,272 @@
 {
-  "requests": "抓包",
-  "favorites": "收藏",
-  "history": "历史",
-  "toolbox": "工具箱",
-  "preference": "偏好设置",
-  "feedback": "反馈",
-  "about": "关于",
-  "filter": "过滤",
-  "script": "脚本",
-  "share": "分享",
-  "port": "端口号: ",
-  "proxy": "代理",
-  "externalProxy": "外部代理设置",
-  "proxySetting": "代理设置",
-  "systemProxy": "设置为系统代理",
+  "requests": "درخواست‌ها",
+  "favorites": "علاقه‌مندی‌ها",
+  "history": "تاریخچه",
+  "toolbox": "جعبه ابزار",
+  "preference": "ترجیحات",
+  "feedback": "بازخورد",
+  "about": "درباره",
+  "filter": "فیلتر",
+  "script": "اسکریپت",
+  "share": "اشتراک‌گذاری",
+  "port": "پورت: ",
+  "proxy": "پراکسی",
+  "externalProxy": "پراکسی خارجی",
+  "proxySetting": "تنظیمات پراکسی",
+  "systemProxy": "تنظیم به عنوان پراکسی سیستم",
 
-  "start": "开始",
-  "stop": "停止",
-  "clear": "清空",
-  "httpsProxy": "HTTPS 代理",
-  "setting": "设置",
-  "mobileConnect": "手机连接",
-  "connectRemote": "连接终端",
-  "myQRCode": "我的二维码",
+  "start": "شروع",
+  "stop": "توقف",
+  "clear": "پاک کردن",
+  "httpsProxy": "پراکسی HTTPS",
+  "setting": "تنظیمات",
+  "mobileConnect": "اتصال موبایل",
+  "connectRemote": "اتصال از راه دور",
+  "myQRCode": "کد QR من",
 
-  "theme": "主题",
-  "followSystem": "跟随系统",
-  "themeLight": "浅色",
-  "themeDark": "深色",
-  "language": "语言",
-  "autoStartup": "自动开启抓包",
-  "autoStartupDescribe": "程序启动时自动开始记录流量",
+  "theme": "تم",
+  "followSystem": "مطابق با سیستم",
+  "themeLight": "روشن",
+  "themeDark": "تیره",
+  "language": "زبان",
+  "autoStartup": "شروع خودکار ضبط ترافیک",
+  "autoStartupDescribe": "شروع خودکار ضبط ترافیک هنگام راه‌اندازی برنامه",
 
-  "copied": "已复制到剪贴板",
-  "cancel": "取消",
-  "close": "关闭",
-  "save": "保存",
-  "confirm": "确认",
-  "confirmTitle": "确认操作",
-  "confirmContent": "是否确认此操作?",
-  "addSuccess": "添加成功",
-  "saveSuccess": "保存成功",
-  "operationSuccess": "操作成功",
-  "import": "导入",
-  "importSuccess": "导入成功",
-  "importFailed": "导入失败",
-  "export": "导出",
-  "exportSuccess": "导出成功",
-  "deleteSuccess": "删除成功",
-  "send": "发送",
-  "fail": "失败",
-  "success": "成功",
-  "emptyData": "无数据",
-  "requestSuccess": "请求成功",
-  "add": "添加",
-  "all": "全部",
-  "modify": "修改",
-  "responseType": "响应类型",
-  "request": "请求",
-  "response": "响应",
-  "statusCode": "状态码",
+  "copied": "به کلیپ‌بورد کپی شد",
+  "cancel": "لغو",
+  "close": "بستن",
+  "save": "ذخیره",
+  "confirm": "تأیید",
+  "confirmTitle": "تأیید عملیات",
+  "confirmContent": "آیا از انجام این عملیات اطمینان دارید؟",
+  "addSuccess": "با موفقیت اضافه شد",
+  "saveSuccess": "با موفقیت ذخیره شد",
+  "operationSuccess": "عملیات با موفقیت انجام شد",
+  "import": "وارد کردن",
+  "importSuccess": "ورود موفقیت‌آمیز",
+  "importFailed": "ورود ناموفق",
+  "export": "صادر کردن",
+  "exportSuccess": "صادر کردن موفقیت‌آمیز",
+  "deleteSuccess": "با موفقیت حذف شد",
+  "send": "ارسال",
+  "fail": "ناموفق",
+  "success": "موفقیت‌آمیز",
+  "emptyData": "داده خالی",
+  "requestSuccess": "درخواست موفقیت‌آمیز",
+  "add": "اضافه کردن",
+  "all": "همه",
+  "modify": "ویرایش",
+  "responseType": "نوع پاسخ",
+  "request": "درخواست",
+  "response": "پاسخ",
+  "statusCode": "کد وضعیت",
 
-  "done": "完成",
-  "type": "类型",
-  "enable": "启用",
-  "example": "示例: ",
-  "responseHeader": "响应头",
-  "requestHeader": "请求头",
-  "requestLine": "请求行",
-  "requestMethod": "请求方法",
-  "param": "参数",
-  "replaceBodyWith": "消息体替换为:",
-  "redirectTo": "重定向到:",
-  "redirect": "重定向",
-  "cannotBeEmpty": "不能为空",
-  "requestRewriteList": "请求重写列表",
-  "requestRewriteRule": "请求重写规则",
-  "requestRewriteEnable": "是否启用请求重写",
-  "action": "行为",
-  "multiple": "多选",
-  "edit": "编辑",
-  "disabled": "禁用",
-  "requestRewriteDeleteConfirm": "是否删除{size}条规则?",
-  "useGuide": "使用文档",
-  "pleaseEnter": "请输入",
-  "click": "点击",
-  "replace": "替换",
-  "itemUpdate": "{size}条修改",
-  "clickEdit": "点击编辑",
-  "refresh": "刷新",
-  "selectFile": "选择文件",
-  "match": "匹配",
-  "value": "值",
-  "matchRule": "匹配规则",
-  "emptyMatchAll": "为空表示匹配全部",
-  "newBuilt": "新建",
-  "enableSelect": "启用选择",
-  "disableSelect": "禁用选择",
-  "deleteSelect": "删除选择",
+  "done": "انجام شد",
+  "type": "نوع",
+  "enable": "فعال کردن",
+  "example": "مثال: ",
+  "responseHeader": "هدر پاسخ",
+  "requestHeader": "هدر درخواست",
+  "requestLine": "خط درخواست",
+  "requestMethod": "روش درخواست",
+  "param": "پارامتر",
+  "replaceBodyWith": "جایگزین کردن محتوا با:",
+  "redirectTo": "انتقال به:",
+  "redirect": "انتقال",
+  "cannotBeEmpty": "نمی‌تواند خالی باشد",
+  "requestRewriteList": "لیست بازنویسی درخواست",
+  "requestRewriteRule": "قانون بازنویسی درخواست",
+  "requestRewriteEnable": "فعال کردن بازنویسی درخواست",
+  "action": "عمل",
+  "multiple": "چندگانه",
+  "edit": "ویرایش",
+  "disabled": "غیرفعال",
+  "requestRewriteDeleteConfirm": "{size} قانون را حذف کنید؟",
+  "useGuide": "راهنمای استفاده",
+  "pleaseEnter": "لطفاً وارد کنید",
+  "click": "کلیک کنید",
+  "replace": "جایگزین کردن",
+  "itemUpdate": "{size} مورد به‌روز شد",
+  "clickEdit": "برای ویرایش کلیک کنید",
+  "refresh": "تازه‌سازی",
+  "selectFile": "انتخاب فایل",
+  "match": "تطبیق",
+  "value": "مقدار",
+  "matchRule": "قانون تطبیق",
+  "emptyMatchAll": "خالی یعنی تطبیق با همه",
+  "newBuilt": "جدید",
+  "enableSelect": "انتخاب فعال‌سازی",
+  "disableSelect": "انتخاب غیرفعال‌سازی",
+  "deleteSelect": "انتخاب حذف",
 
-  "modifyRequestHeader": "修改请求头",
-  "headerName": "请求头名称",
-  "headerValue": "请求头值",
-  "deleteHeaderConfirm": "是否删除该请求头",
+  "modifyRequestHeader": "ویرایش هدر",
+  "headerName": "نام هدر",
+  "headerValue": "مقدار هدر",
+  "deleteHeaderConfirm": "آیا می‌خواهید هدر درخواست را حذف کنید؟",
 
-  "sequence": "全部请求",
-  "domainList": "域名列表",
-  "domainWhitelist": "域名白名单",
-  "domainBlacklist": "域名黑名单",
-  "appWhitelist": "应用白名单",
-  "appWhitelistDescribe": "只代理白名单中的应用, 白名单启用黑名单将会失效",
-  "appBlacklist": "应用黑名单",
-  "domainFilter": "域名代理列表",
-  "scanCode": "扫码连接",
-  "addBlacklist": "添加黑名单",
-  "addWhitelist": "添加白名单",
-  "deleteWhitelist": "删除白名单",
-  "domainListSubtitle": "最后请求时间: {time},  次数: {count}",
+  "sequence": "تمام درخواست‌ها",
+  "domainList": "لیست دامنه",
+  "domainWhitelist": "لیست سفید دامنه",
+  "domainBlacklist": "لیست سیاه دامنه",
+  "domainFilter": "لیست پراکسی دامنه",
+  "appWhitelist": "لیست سفید اپلیکیشن",
+  "appWhitelistDescribe": "تنها اپلیکیشن‌های لیست سفید را پراکسی کن. در صورت فعال‌سازی لیست سفید، لیست سیاه غیرفعال می‌شود",
+  "appBlacklist": "لیست سیاه اپلیکیشن",
+  "scanCode": "اسکن کد برای اتصال",
+  "addBlacklist": "اضافه کردن به لیست سیاه فیلتر",
+  "addWhitelist": "اضافه کردن به لیست سفید فیلتر",
+  "deleteWhitelist": "حذف لیست سفید فیلتر",
+  "domainListSubtitle": "زمان آخرین درخواست: {time}، تعداد: {count}",
 
-  "copy": "复制",
-  "copyHost": "复制域名",
-  "copyUrl": "复制URL",
-  "copyRequestResponse": "复制 请求和响应",
-  "copyCurl": "复制 cURL 请求",
-  "copyAsPythonRequests": "复制 Python Requests 请求",
-  "delete": "删除",
-  "rename": "重命名",
-  "repeat": "重放",
-  "repeatAllRequests": "重放所有请求",
-  "repeatDomainRequests": "重放域名下请求",
-  "customRepeat": "高级重放",
-  "repeatCount": "次数",
-  "repeatInterval": "间隔(ms)",
-  "repeatDelay": "延时(ms)",
-  "fixed": "固定",
-  "random": "随机",
-  "keepCustomSettings": "保持自定义设置",
-  "editRequest": "编辑请求",
-  "reSendRequest": "已重新发送请求",
-  "viewExport": "视图导出",
+  "copy": "کپی",
+  "copyHost": "کپی میزبان",
+  "copyUrl": "کپی URL",
+  "copyRequestResponse": "کپی درخواست و پاسخ",
+  "copyCurl": "کپی به cURL",
+  "copyAsPythonRequests": "کپی به صورت Python Requests",
+  "delete": "حذف",
+  "rename": "تغییر نام",
+  "repeat": "تکرار",
+  "repeatAllRequests": "تکرار همه درخواست‌ها",
+  "repeatDomainRequests": "تکرار درخواست‌های دامنه",
+  "customRepeat": "تکرار سفارشی",
+  "repeatCount": "تعداد تکرار",
+  "repeatInterval": "فاصله (میلی‌ثانیه)",
+  "repeatDelay": "تاخیر (میلی‌ثانیه)",
+  "fixed": "ثابت",
+  "random": "تصادفی",
+  "keepCustomSettings": "حفظ تنظیمات سفارشی",
+  "editRequest": "ویرایش و درخواست",
+  "reSendRequest": "درخواست دوباره ارسال شد",
+  "viewExport": "مشاهده صادرات",
 
-  "search": "搜索",
-  "clearSearch": "清除搜索",
-  "requestType": "请求类型",
-  "keyword": "关键词",
-  "keywordSearchScope": "关键词搜索范围: ",
+  "search": "جستجو",
+  "clearSearch": "پاک کردن جستجو",
+  "requestType": "نوع درخواست",
+  "keyword": "کلمه کلیدی",
+  "keywordSearchScope": "محدوده جستجوی کلمه کلیدی: ",
 
-  "favorite": "收藏请求",
-  "deleteFavorite": "删除收藏",
-  "emptyFavorite": "暂无收藏",
-  "deleteFavoriteSuccess": "已删除收藏",
-  "name": "名称",
+  "favorite": "علاقه‌مندی",
+  "deleteFavorite": "حذف علاقه‌مندی",
+  "emptyFavorite": "علاقه‌مندی خالی",
+  "deleteFavoriteSuccess": "علاقه‌مندی حذف شد",
+  "name": "نام",
 
-  "historyRecord": "历史记录",
-  "historyManualSave": "手动保存",
-  "historyDay": "{day}天",
-  "historyForever": "永久",
-  "historyCacheTime": "缓存时间",
-  "historyEmptyName": "名称不能为空",
-  "historyRecordTitle": "{name} 记录数 {length}",
-  "historySubtitle": "记录数 {requestLength}  文件 {size}",
-  "historyUnSave": "当前会话记录未保存",
-  "historyDeleteConfirm": "是否删除该历史记录？",
+  "historyRecord": "رکورد تاریخچه",
+  "historyCacheTime": "زمان کش تاریخچه",
+  "historyManualSave": "ذخیره دستی",
+  "historyDay": "{day} روز",
+  "historyForever": "همیشه",
+  "historyRecordTitle": "رکورد {name} به تعداد {length}",
+  "historyEmptyName": "نام نمی‌تواند خالی باشد",
+  "historySubtitle": "رکورد {requestLength} فایل {size}",
+  "historyUnSave": "رکورد جاری ذخیره نشده است",
+  "historyDeleteConfirm": "آیا می‌خواهید این تاریخچه را حذف کنید؟",
 
-  "requestEdit": "请求编辑",
-  "encode": "编码",
-  "decode": "解码",
-  "requestBody": "请求体",
-  "responseBody": "响应体",
-  "requestRewrite": "请求重写",
-  "newWindow": "新窗口打开",
-  "httpRequest": "HTTP请求",
+  "requestEdit": "ویرایش درخواست",
+  "encode": "رمزگذاری",
+  "requestBody": "بدنه درخواست",
+  "responseBody": "بدنه پاسخ",
+  "requestRewrite": "بازنویسی درخواست",
+  "newWindow": "پنجره جدید",
+  "httpRequest": "درخواست HTTP",
 
-  "enabledHttps": "启用HTTPS代理",
-  "installRootCa": "安装根证书",
-  "installCaLocal": "安装根证书到本机",
-  "downloadRootCa": "下载根证书",
-  "generateCA": "重新生成根证书",
-  "generateCADescribe": "您确定要生成新的根证书吗? 如果确认，\n则需要重新安装并信任新的证书",
-  "resetDefaultCA": "重置默认根证书",
-  "resetDefaultCADescribe": "确定要重置为默认根证书吗? ProxyPin默认\n根证书对所有用户都是相同的.",
-  "exportCaP12": "导出根证书 (.p12)",
-  "importCaP12": "导入根证书 (.p12)",
-  "trustCa": "信任证书",
-  "exportCA": "导出根证书",
-  "exportPrivateKey": "导出私钥",
-  "profileDownload": "已下载描述文件",
-  "install": "安装",
-  "installCaDescribe": "安装证书 设置 > 已下载描述文件 > 安装",
-  "trustCaDescribe": "信任证书 设置 > 通用 > 关于本机 > 证书信任设置",
-  "androidRoot": "系统证书 (ROOT设备)",
-  "androidRootMagisk": "Magisk模块: \n安卓ROOT设备可以使用Magisk ProxyPinCA系统证书模块, 安装完重启手机后 在系统证书查看是否有ProxyPinCA证书，如果有说明证书安装成功。",
-  "androidRootRename": "模块不生效可以根据网上教程安装系统根证书, 根证书命名成 243f0bfb.0",
-  "androidUserCA": "用户证书",
-  "androidUserCATips": "提示：Android7+ 很多软件不会信任用户证书",
-  "androidRootCADownload": "下载系统根证书(.0)",
-  "androidUserCAInstall": "打开设置 -> 安全 -> 加密和凭据 -> 安装证书 -> CA 证书",
-  "androidUserXposed": "推荐使用Xposed模块抓包(无需ROOT), 点击查看wiki",
-  "configWifiProxy": "配置手机Wi-Fi代理",
-  "caInstallGuide": "证书安装指南",
-  "caAndroidBrowser": "在 Android 设备上打开浏览器访问：",
-  "caIosBrowser": "在 iOS 设备上打开 Safari访问：",
+  "enabledHttps": "فعال‌سازی پراکسی HTTPS",
+  "installRootCa": "نصب گواهی",
+  "installCaLocal": "نصب گواهی بر روی Local-Machine",
+  "downloadRootCa": "دانلود گواهی",
+  "generateCA": "تولید گواهی ریشه جدید",
+  "generateCADescribe": "آیا از تولید گواهی ریشه جدید مطمئن هستید؟ اگر تأیید شد،\nباید گواهی جدید را نصب و اعتماد کنید",
+  "resetDefaultCA": "بازنشانی گواهی ریشه پیش‌فرض",
+  "resetDefaultCADescribe": "آیا از بازنشانی به گواهی ریشه پیش‌فرض مطمئن هستید؟\nگواهی ریشه پیش‌فرض ProxyPin برای همه کاربران یکسان است.",
+  "exportCaP12": "صادرات گواهی ریشه (.p12)",
+  "importCaP12": "وارد کردن گواهی ریشه (.p12)",
+  "trustCa": "اعتماد به گواهی",
+  "profileDownload": "دانلود پروفایل",
+  "exportCA": "صادرات گواهی ریشه",
+  "exportPrivateKey": "صادرات کلید خصوصی",
+  "install": "نصب",
+  "installCaDescribe": "نصب تنظیمات CA > دانلود پروفایل > نصب",
+  "trustCaDescribe": "اعتماد به تنظیمات CA > عمومی > درباره > تنظیمات اعتماد به گواهی",
+  "androidRoot": "گواهی سیستم (دستگاه روت‌شده)",
+  "androidRootMagisk": "ماژول Magisk:\nدستگاه‌های اندروید روت‌شده می‌توانند از ماژول گواهی سیستم Magisk ProxyPinCA استفاده کنند. پس از نصب و راه‌اندازی مجدد گوشی بررسی کنید که آیا گواهی ProxyPinCA در سیستم وجود دارد. اگر وجود داشت، نشان می‌دهد که گواهی با موفقیت نصب شده است.",
+  "androidRootRename": "اگر ماژول اثر نکرد، می‌توانید گواهی ریشه سیستم را طبق راهنمای آنلاین نصب کنید و نام گواهی ریشه را 243f0bfb.0 بگذارید",
+  "androidRootCADownload": "دانلود گواهی سیستم (.0)",
+  "androidUserCA": "گواهی کاربر",
+  "androidUserCATips": "نکته: بسیاری از اپلیکیشن‌ها در اندروید 7+ به گواهی‌های کاربر اعتماد نمی‌کنند",
+  "androidUserCAInstall": "باز کردن تنظیمات -> امنیت -> رمزگذاری و اعتبارنامه‌ها -> نصب گواهی -> گواهی CA",
+  "androidUserXposed": "پیشنهاد می‌شود از ماژول Xposed برای بسته‌بندی (بدون نیاز به روت) استفاده کنید، کلیک کنید تا ویکی را مشاهده کنید",
+  "configWifiProxy": "پیکربندی پراکسی Wi-Fi موبایل",
+  "caInstallGuide": "راهنمای نصب گواهی",
+  "caAndroidBrowser": "باز کردن مرورگر گوگل در دستگاه‌های اندروید:",
+  "caIosBrowser": "باز کردن Safari در دستگاه‌های iOS:",
 
-  "localIP": "本地IP ",
-  "mobileScan": "配置Wi-Fi代理或使用手机版扫描二维码",
+  "localIP": "IP محلی",
+  "mobileScan": "پیکربندی پراکسی Wi-Fi یا اسکن با اپ موبایل",
 
-  "encodeInput": "输入要转换的内容",
-  "encodeResult": "转换结果",
-  "encodeFail": "编码失败",
-  "decodeFail": "解码失败",
+  "decode": "رمزگشایی",
+  "encodeInput": "محتوای مورد نظر برای تبدیل را وارد کنید",
+  "encodeResult": "نتیجه تبدیل",
+  "encodeFail": "رمزگذاری ناموفق بود",
+  "decodeFail": "رمزگشایی ناموفق بود",
 
-  "shareUrl": "分享请求链接",
-  "shareCurl": "分享 cURL 请求",
-  "shareRequestResponse": "分享请求和响应",
-  "captureDetail": "抓包详情",
-  "proxyPinSoftware": "ProxyPin全平台抓包软件",
+  "shareUrl": "اشتراک‌گذاری URL درخواست",
+  "shareCurl": "اشتراک‌گذاری درخواست cURL",
+  "shareRequestResponse": "اشتراک‌گذاری درخواست و پاسخ",
+  "captureDetail": "جزئیات ضبط",
+  "proxyPinSoftware": "نرم‌افزار کامل بسته‌بندی ProxyPin",
 
-  "prompt": "提示",
-  "curlSchemeRequest": "识别到curl格式，是否转换为HTTP请求？",
-  "appExitTips": "再按一次退出程序",
-  "remoteConnectDisconnect": "检查远程连接失败，已断开",
-  "reconnect": "重新连接",
-  "remoteConnected": "已连接{os}，手机抓包已关闭",
-  "remoteConnectForward": "远程连接，将请求转发到其他终端",
-  "connectSuccess": "连接成功",
-  "connectedRemote": "已连接远程",
-  "connected": "已连接",
-  "disconnect": "断开连接",
-  "syncConfig": "同步配置",
-  "pullConfigFail": "拉取配置失败, 请检查网络连接",
-  "sync": "同步",
-  "invalidQRCode": "无法识别的二维码",
-  "remoteConnectFail": "连接失败，请检查是否在同一局域网和防火墙是否允许",
-  "remoteConnectSuccessTips": "手机需要开启抓包才可以抓取请求哦",
+  "prompt": "پیام",
+  "curlSchemeRequest": "اگر فرمت cURL تشخیص داده شد، آیا باید به درخواست HTTP تبدیل شود؟",
+  "appExitTips": "دوباره برای خروج از برنامه فشار دهید",
+  "remoteConnectDisconnect": "بررسی اتصال از راه دور ناموفق بود، اتصال قطع شد",
+  "reconnect": "اتصال مجدد",
+  "remoteConnected": "{os} متصل شد، بسته‌بندی موبایل خاموش است",
+  "remoteConnectForward": "اتصال از راه دور، انتقال درخواست‌ها به ترمینال‌های دیگر",
+  "connectSuccess": "اتصال موفقیت‌آمیز",
+  "connectedRemote": "به از راه دور متصل شد",
+  "connected": "متصل",
+  "disconnect": "قطع اتصال",
+  "syncConfig": "همگام‌سازی تنظیمات",
+  "pullConfigFail": "کشیدن تنظیمات ناموفق بود، لطفاً اتصال شبکه را بررسی کنید",
+  "sync": "همگام‌سازی",
+  "invalidQRCode": "کد QR غیرقابل شناسایی",
+  "remoteConnectFail": "اتصال ناموفق، لطفاً بررسی کنید که آیا در همان شبکه LAN و فایروال مجاز است",
+  "remoteConnectSuccessTips": "گوشی شما نیاز دارد تا بسته‌بندی را فعال کند تا درخواست‌ها را ضبط کند",
 
-  "windowMode": "窗口模式",
-  "windowModeSubTitle": "开启抓包后 如果应用退回到后台，显示一个小窗口",
-  "windowIcon": "窗口快捷图标",
-  "windowIconDescribe": "展示快捷进入小窗口Icon",
-  "headerExpanded": "Headers自动展开",
-  "headerExpandedSubtitle": "详情页Headers栏是否自动展开",
+  "windowMode": "حالت پنجره",
+  "windowModeSubTitle": "بسته‌بندی فعال شد، به پس‌زمینه بروید، یک پنجره کوچک نشان داده می‌شود",
+  "windowIcon": "آیکون میانبر پنجره",
+  "windowIconDescribe": "نمایش آیکون دسترسی سریع به پنجره کوچک",
+  "headerExpanded": "هدرهای باز شده",
+  "headerExpandedSubtitle": "صفحه جزئیات هدرها به‌طور پیش‌فرض باز می‌شود",
 
-  "externalProxyConnectFailure": "外部代理连接失败",
-  "externalProxyFailureConfirm": "网络不通所有接口将会访问失败，是否继续设置外部代理。",
-  "mobileDisplayPacketCapture": "手机端是否展示抓包:",
-  "proxyPortRepeat": "启动失败，请检查端口号{port}是否被占用",
-  "reset": "重置",
-  "proxyIgnoreDomain": "代理忽略域名",
-  "domainWhitelistDescribe": "只代理白名单中的域名, 白名单启用黑名单将会失效",
-  "domainBlacklistDescribe": "黑名单中的域名不会代理",
-  "domain": "域名",
-  "enableScript": "启用脚本工具",
-  "scriptUseDescribe": "使用 JavaScript 修改请求和响应",
-  "scriptEdit": "编辑脚本",
-  "scrollEnd": "跟踪滚动",
-  "logger": "日志",
-  "material3": "Material3是谷歌开源设计系统的最新版本",
-  "iosVpnBackgroundAudio": "开启抓包后，退出到后台。为了维护主UI线程的网络通信，将启用静音音频播放以保持主线程运行。否则，它将只在后台运行30秒。您同意在启用抓包后在后台播放音频吗?",
+  "externalProxyConnectFailure": "اتصال به پراکسی خارجی ناموفق",
+  "externalProxyFailureConfirm": "دسترسی به همه HTTP به دلیل مشکلات اتصال به شبکه ناموفق خواهد بود، آیا می‌خواهید به تنظیمات پراکسی خارجی ادامه دهید؟",
+  "mobileDisplayPacketCapture": "نمایش بسته‌بندی موبایل:",
+  "proxyPortRepeat": "شروع ناموفق بود، لطفاً بررسی کنید که آیا شماره پورت {port} اشغال شده است.",
+  "reset": "بازنشانی",
+  "proxyIgnoreDomain": "پراکسی دامنه را نادیده بگیر",
+  "domainWhitelistDescribe": "تنها دامنه‌های لیست سفید را پراکسی کن. در صورت فعال‌سازی لیست سفید، لیست سیاه غیرفعال می‌شود",
+  "domainBlacklistDescribe": "دامنه‌های لیست سیاه پراکسی نخواهند شد",
+  "domain": "میزبان",
+  "enableScript": "فعال کردن اسکریپت",
+  "scriptUseDescribe": "استفاده از جاوااسکریپت برای تغییر درخواست‌ها و پاسخ‌ها",
+  "scriptEdit": "ویرایش اسکریپت",
+  "scrollEnd": "اسکرول به انتها",
+  "logger": "لاگ",
+  "material3": "Material 3 آخرین نسخه سیستم طراحی متن‌باز گوگل است",
 
-  "highlight": "高亮",
-  "blue": "蓝色",
-  "green": "绿色",
-  "yellow": "黄色",
-  "red": "红色",
-  "pink": "粉色",
-  "gray": "灰色",
-  "underline": "下划线",
+  "iosVpnBackgroundAudio": "پس از روشن کردن بسته‌بندی، به پس‌زمینه بروید. برای حفظ نخ اصلی UI برای ارتباطات شبکه‌ای، یک پخش صوتی بی‌صدا برای ادامه نخ اصلی فعال می‌شود. در غیر این صورت، فقط ۳۰ ثانیه در پس‌زمینه اجرا خواهد شد. آیا موافقید که پس از روشن کردن بسته‌بندی، صوتی در پس‌زمینه پخش شود؟",
 
-  "requestBlock": "请求屏蔽"
+  "highlight": "برجسته‌سازی",
+  "blue": "آبی",
+  "green": "سبز",
+  "yellow": "زرد",
+  "red": "قرمز",
+  "pink": "صورتی",
+  "gray": "خاکستری",
+  "underline": "زیرخط",
+
+  "requestBlock": "مسدود کردن درخواست"
 }
